# cad-recode-reproduction-stable_2

./: pyproject.toml
cad_recode/: __init__.py  dataset.py  evaluate.py  model.py  train.py  utils.py
cad_recode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
config/: config.yaml
recode-dataset/cad_recode_dataset/: README.md
